# libiconv

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py  iconv.h.in
cmake/: config.cmake  libiconv.def
test_package/: test_package.cpp
